--- a/app/templates/backend/user_templates/user_login.html
+++ b/app/templates/backend/user_templates/user_login.html
@@ -12,7 +12,7 @@
                   <div class="container">
                      <div class="row">
                         <div class="col-md-9 col-lg-8 mx-auto pl-5 pr-5">
-                           <h3 class="login-heading mb-4">Welcome back!</h3>
+                           <h3 class="login-heading mb-4">Willkommen zurück!</h3>
 
                            <!-- Flash Messages Block -->
                      {% with messages = get_flashed_messages(with_categories=true) %}
