--- a/app/templates/frontend/checkout.html
+++ b/app/templates/frontend/checkout.html
@@ -1,4 +1,4 @@
-{% include 'frontend/client_details_frontend/header.html' %}
+{% extends "frontend/base_detail.html" %}
 
 {% block title %}Kasse{% endblock %}
 
