--- a/app/templates/frontend/layout/header.html
+++ b/app/templates/frontend/layout/header.html
@@ -35,10 +35,10 @@
             
              <li class="nav-item dropdown dropdown-cart">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-shopping-basket"></i> Cart
+                <i class="fas fa-shopping-basket"></i> Warenkorb
                 <span class="badge badge-success">5</span>
                 </a>
-                <div class="dropdown-menu dropdown-cart-top p-0 dropdown-menu-right shadow-sm border-0">
+                <!--<div class="dropdown-menu dropdown-cart-top p-0 dropdown-menu-right shadow-sm border-0">
                    <div class="dropdown-cart-top-header p-4">
                       <img class="img-fluid mr-3" alt="osahan" src="img/cart.jpg">
                       <h6 class="mb-0">Gus's World Famous Chicken</h6>
@@ -59,7 +59,7 @@
                    <div class="dropdown-cart-top-footer border-top p-2">
                       <a class="btn btn-success btn-block btn-lg" href="checkout.html"> Checkout</a>
                    </div>
-                </div>
+                </div>-->
              </li>
           </ul>
        </div>
