--- a/app/templates/backend/user_templates/dashboard/passwort_aendern.html
+++ b/app/templates/backend/user_templates/dashboard/passwort_aendern.html
@@ -1,8 +1,13 @@
-{% include 'backend/user_templates/dashboard/header.html' %}
-<section class="section pt-4 pb-4 osahan-account-page">
-    <div class="container">
-       <div class="row">
-         {% include 'backend/user_templates/dashboard/sidebar.html' %}
+{% extends "backend/user_templates/dashboard/base_dashboard.html" %}
+
+{% block title %}{% endblock %}
+
+{% block stylesheets %}{% endblock stylesheets %}
+
+
+{% block content %}
+
+
 
 
           <div class="col-md-9">
@@ -89,14 +94,7 @@
              </div>
           </div>
 
-
-
-
-
-       </div>
-    </div>
- </section>
- {% include 'backend/user_templates/dashboard/footer.html' %}
+ {% endblock content %}
 
  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
