--- a/app/templates/frontend/client_detail.html
+++ b/app/templates/frontend/client_detail.html
@@ -415,7 +415,7 @@
                   <div class="pb-2">
               <div class="bg-white rounded shadow-sm text-white mb-4 p-4 clearfix restaurant-detailed-earn-pts card-icon-overlap">
                 <h5 class="mb-1 text">Ihre Warenkorb</h5>
-                <p class="mb-4 text" id="cart-count">{{ total_items }} Artikel im Warenkorb</p>
+                <p class="mb-4 text" ><span class="mb-4 text" id="cart-count">{{ total_items }}</span> Artikle im Warenkorb</p>
             
                 <div class="bg-white rounded shadow-sm mb-2">
                     {% for product_id, item in cart.items() %}
