--- a/app/templates/frontend/client_details_frontend/header.html
+++ b/app/templates/frontend/client_details_frontend/header.html
@@ -34,30 +34,78 @@
             <li class="nav-item dropdown dropdown-cart">
                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                <i class="fas fa-shopping-basket"></i> Warenkorb
-               <span class="badge badge-success">5</span>
+               <span class="badge badge-success"><span id="cart-count-header">{{ total_items }}</span></span>
                </a>
-               <!--<div class="dropdown-menu dropdown-cart-top p-0 dropdown-menu-right shadow-sm border-0">
+               <div class="dropdown-menu dropdown-cart-top p-0 dropdown-menu-right shadow-sm border-0">
                   <div class="dropdown-cart-top-header p-4">
-                     <img class="img-fluid mr-3" alt="osahan" src="img/cart.jpg">
-                     <h6 class="mb-0">Gus's World Famous Chicken</h6>
-                     <p class="text-secondary mb-0">310 S Front St, Memphis, USA</p>
-                     <small><a class="text-primary font-weight-bold" href="#">View Full Menu</a></small>
+                     <img class="img-fluid mr-3 float-left" alt="logo" src="{% if client.photo %}{{ url_for('static', filename=client.photo.replace('\\', '/')) }}{% else %}{{ url_for('static', filename='frontend/themes/img/list/1.png') }}{% endif %}" class="img-fluid mb-4" alt="{{ client.clientname }}">
+                     <h6 class="mb-0">{{client.clientname}}</h6>
+                     <p class="text-secondary mb-0">{{client.street}} {{ client.house_number}}, {{client.postal_code}} {{client.city}}</p>
+                     <small><a class="text-primary font-weight-bold" href="{{ url_for('frontend_bp.client_detail', client_id=client.id) }}">Menü anzeigen</a></small>
                   </div>
                   <div class="dropdown-cart-top-body border-top p-4">
-                     <p class="mb-2"><i class="icofont-ui-press text-danger food-item"></i> Chicken Tikka Sub 12" (30 cm) x 1   <span class="float-right text-secondary">$314</span></p>
-                     <p class="mb-2"><i class="icofont-ui-press text-success food-item"></i> Corn & Peas Salad x 1   <span class="float-right text-secondary">$209</span></p>
-                     <p class="mb-2"><i class="icofont-ui-press text-success food-item"></i> Veg Seekh Sub 6" (15 cm) x 1  <span class="float-right text-secondary">$133</span></p>
-                     <p class="mb-2"><i class="icofont-ui-press text-danger food-item"></i> Chicken Tikka Sub 12" (30 cm) x 1   <span class="float-right text-secondary">$314</span></p>
-                     <p class="mb-2"><i class="icofont-ui-press text-danger food-item"></i> Corn & Peas Salad x 1   <span class="float-right text-secondary">$209</span></p>
+                     <div class="bg-white">
+                        {% for product_id, item in cart.items() %}
+                        <div class="gold-members d-flex align-items-center justify-content-between" data-product-id="{{ product_id }}" data-price-per-unit="{{ item['price'] }}">
+                            <div class="media align-items-top">
+                                <div class="mr-2">
+                                    <!-- Produktbild anzeigen -->
+                                    <img src="{{ url_for('static', filename='upload/client_produktbilder/' ~ item['client_id'] ~ '/' ~ item['image']) }}" alt="{{ item['name'] }}" style="width: 30px; height: 30px;" class="rounded-pill">
+                                </div>
+                                <div class="media-body">
+                                    <!-- Produktname anzeigen -->
+                                    <p class="mt-1 mb-0 text-black"><p class="mt-1 mb-0 text-black product-name" data-name="{{ item['name'] }}">{{ item['quantity'] }}x {{ item['name'] }}</p>
+                                </p>
+                                </div>
+                            </div>
+                            <div class="d-flex align-items-center">
+                                <!--<span class="count-number">
+                                    <button class="btn btn-outline-secondary btn-sm left dec mr-1"> <i class="icofont-minus"></i> </button>
+                                    <input class="count-number-input text-center" type="text" value="{{ item['quantity'] }}" readonly="" style="width: 40px;">
+                                    <button class="btn btn-outline-secondary btn-sm right inc ml-1"> <i class="icofont-plus"></i> </button>
+                  
+                                    <button class="btn btn-outline-danger btn-sm right remove ml-1"> <i class="icofont-trash"></i> </button>
+                                </span>-->
+                                <span class="ml-3 text font-weight-bold" style="color: black !important;">{{ '{:.2f}'.format(item['price'] * item['quantity']) }} €</span> <!-- Produktpreis x Menge mit zwei Dezimalstellen -->
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                     
                   </div>
                   <div class="dropdown-cart-top-footer border-top p-4">
-                     <p class="mb-0 font-weight-bold text-secondary">Sub Total <span class="float-right text-dark">$499</span></p>
-                     <small class="text-info">Extra charges may apply</small>  
+                     <div class="mb-2 bg-white clearfix">
+                        <h6 class="font-weight-bold text-right mb-2 d-flex justify-content-between">
+                            <span>Zwischensumme:</span> <span class="text" id="total-cost-header">{{ '{:.2f}'.format(total_cost) }} €</span>  <!-- Subtotal Element mit zwei Dezimalstellen -->
+                        </h6>
+                  
+                        <div id="tax-details-header">
+                            {% for rate, tax_amount in tax_details.items() %}
+                            <p class="text-muted mb-1 d-flex justify-content-between">
+                                <span>MwSt./USt. {{ rate }} %:</span> <span class="text-muted mb-1 text-right">{{ '{:.2f}'.format(tax_amount) }} €</span>  
+                            </p>
+                            {% endfor %}
+                        </div>
+                        
+                        
+                        
+                        <h6 class="font-weight-bold text-right mb-2 d-flex justify-content-between">
+                            <span>MwSt./USt. Insgesamt:</span> <span class="text" id="tax-header">{{ '{:.2f}'.format(total_tax) }} €</span>  
+                        </h6>
+                  
+                         
+                  <hr>
+                        <h6 class="font-weight-bold text-right mb-2 d-flex justify-content-between">
+                            <span>Gesamtsumme:</span> <span class="text" id="grand-total-header">{{ '{:.2f}'.format(total_cost) }} €</span>  
+                        </h6>
+                        <p class="text-muted mb-1 text-right">Inkl. MwSt./USt.</p>
+                    </div>  
                   </div>
                   <div class="dropdown-cart-top-footer border-top p-2">
-                     <a class="btn btn-success btn-block btn-lg" href="checkout.html"> Checkout</a>
+                     
+                     <a href="{{ url_for('checkout_bp.checkout') }}" class="btn btn-success btn-block btn-lg">Zur Kasse gehen <i class="icofont-long-arrow-right"></i></a>
                   </div>
-               </div>-->
+               </div>
                
             </li>
          </ul>
